--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET=MYSECRETPASSWORD
-DATABASE_URL=
+DATABASE_URL='mongodb+srv://CarlosDeO:562@cluster1-fdh8f.mongodb.net/AutoFixDb?retryWrites=true&w=majority'
